# GenieBot

./: .coveragerc  USER_STEPS.md  agents.md  base_handlers.py  bot_pinger.py  button_handlers.py  config.py  constants.py  handlers_setup.py  main.py  postgres_persistence.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __main__.py  base_handlers.py  bot_pinger.py  button_handlers.py  chat_track_handler.py  config.py  constants.py  db_persistence.py  handlers_setup.py  main.py  postgres_persistence.py
tests/: test_crud_wishes.py  test_fulfill.py  test_make_wish_fallback.py  test_multiple_wishes_listing.py  test_persistence.py  test_wish_limit.py  utils.py
